fixed some spacing issues

--- a/blocks/marquee/marquee.css
+++ b/blocks/marquee/marquee.css
@@ -8,6 +8,10 @@ div.marquee-wrapper {
   margin-right: calc(-1 * var(--space-token-xs));
 }
 
+body[class ^= 'browse-'] .section div.marquee-wrapper {
+  margin-bottom: 40px;
+}
+
 .marquee {
   position: relative;
 }
@@ -36,6 +40,7 @@ div.marquee-wrapper {
   position: relative;
   z-index: 2;
   padding: 32px 20px;
+  background-color: var(--background-color);
 }
 
 .marquee-eyebrow {
